--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -7,6 +7,9 @@
 	background: white;
 	box-shadow: 2px 2px 50px rgb(204, 204, 204);
 	overflow: scroll;
+	transform: translateX(-100%);
+	transition: all 0.5s ease;
+	opacity: 0;
 	h2 {
 		padding: 2rem;
 	}
@@ -52,4 +55,13 @@
 	background-color: rgba(155, 155, 155, 0.5);
 	border-radius: 20px;
 	border: transparent;
+}
+
+.selected {
+	background: rgb(149, 158, 212);
+}
+
+.active-library {
+	transform: translateX(0%);
+	opacity: 1;
 }
